2003-05-11  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* Makefile.in :
	* configure :
	* configure.ac :
	* main/Makefile.in :
	* common/* :
	* kb/* :
	* parser/* :

	  - Moved all sources to the new lib directory to combine all
	    objects into one library libvlad.

2003-05-06  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* common/Makefile.in :
	* kb/Makefile.in :
	* main/Makefile.in :
	* parser/Makefile.in :

	  - Now package will build on systems without ln -s or even ln.

	  - Now includes rules.mk.

	* rules.mk :

	  - Added a global rules file to centralise makefile rules.

2003-05-05  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* kb/sequence.cpp :
	* kb/sequence.h :
	* kb/seqtab.cpp :
	* kb/seqtab.h :
	* kb/Makefile.in :

	  - Renamed sequence to seqtab.

	  - Added a delete function.

	* kb/kb.cpp :
	* kb/kb.h :

	  - Sequence table is now global to any query.

	  - Added add, delete and list functions for sequence table.

	* main/vlad.cpp :
	* parser/Makefile.in :
	* parser/parser.h :
	* parser/query.l :
	* parser/query.y :
	* parser/operation.l :
	* parser/operation.y :

	  - Renamed query to operation because the parser/scanner is no longer
	    restricted to queries.

2003-05-02  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* main/vlad.cpp :
	* parser/parser.h :
	* parser/program.l :
	* parser/program.y :
	* parser/query.l :
	* parser/query.y :

	  - Some cleanup so we do not propagate the external references from
	    the code generated by bison and flex.

2003-05-01  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* parser/program.y :
	* parser/query.y :

	  - Now error messages are somewhat more descriptive.

	* common/vlad.h :
	* kb/kb.cpp :
	* kb/wrapper.cpp :

	  - Added an invalid op error code.

	* main/Makefile.in :

	  - We no longer need to link against libfl.

2003-04-29  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* docs/bnf.txt :
	* docs/bnf_program.txt :
	* docs/bnd_query.txt :

	  - Again separated program from query.

	* samples/chinese_wall :